--- a/css/styles.css
+++ b/css/styles.css
@@ -1,57 +1,98 @@
-body {
-  
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-weight: 300;
-    }
+  body {
+    font-family: "nunito", "montserrat", sans-serif;
+    font-weight: 400;
+  }
 
-    h1{
+  section{
+    background-color: white;
+  }
+
+  h1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Pacifico', cursive;
+    font-size: 2em;
+    margin-top: 75px;
+  }
+
+  h3{
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: left;
     font-family: 'Pacifico', cursive;
-    font-size: 2.8em;
-    margin-left: 300px;
-    }
+    font-size: 1.8em;
+    margin-left: 500px;
+  }
 
-    /*h3{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: left;
-      font-family: 'Pacifico', cursive;
-      font-size: 1.8em;
-      margin-left: 500px;
-      }*/
+  #container {
+    width:1279px;
+    margin: 0 auto;
+    margin-top:50px;
+  }
 
-    #container {
-      width:1279px;
-      margin:auto;
-      margin-top:50px;
-    }
-
-    #form{
+  #form{
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    }
+  }
+    /* Style the submit button with a specific background color etc */
+  #form
+  input[type=submit] {
+    background-color: #1e1e1e;
+    color: orange;
+    font-weight: bold;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-items: center;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
 
+  #form
+  input[type=submit]:hover {
+    background-color: orange;
+    color: #1e1e1e;
+  }
     
-    .post-card{
-      float:left;
-      width:350px;
-      height: 550px;
-      background-color: white;
-      border-color: #545454;
-      color: #e34400;
-      margin:15px;
-      text-align: center;
-      font-size: 1em;
-    }
-    .center-text {
-      text-align: center;
-    }
+  .post-card{
+    float:left;
+    width:280px;
+    height: 550px;
+    background-color: white;
+    border-style: solid;
+    color: #545454;
+    margin: 40px;
+    text-align: center;
+    white-space: wrap;
+    overflow: hidden;
+  }
+
+  .post-card
+  h4{
+    font-size: 1em;
+    font-weight: bold;
+    color: orange;
+    padding: 15px;
+  }
+
+  .post-card,
+  p{
+    font-size: 1em;
+    font-weight: normal;
+    padding: 15px;
+  }
+
+
+  .center-text {
+    text-align: center;
+  }
 
    /* #contact-form
 h1
@@ -82,7 +123,7 @@ textarea {
   /*resize: vertical; /* Allow the user to vertically resize the textarea (not horizontally) 
 }*/
 
-/* Style the submit button with a specific background color etc */
+
 /*input[type=submit] {
   background-color: #fffafb;
   color: #bb0a21;
